hphp/hack/test/typecheck/strict_no_statements3.php.exp
File "strict_no_statements3.php", line 4, characters 1-4:
Toplevel statements besides requires are not allowed in strict files (Parsing[1002])
