hphp/hack/test/typecheck/strict_no_statements3.php
<?hh

function f(): void {}
f();
